force-app/main/default/objects/Contact/fields/Date_Contact_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Contact_Status_Updated__c</fullName>
    <description>To be used by Adm personnel only</description>
    <inlineHelpText>Add date when contact status has been updated from Sales task</inlineHelpText>
    <label>Date Contact Status Updated</label>
    <type>Date</type>
</CustomField>