force-app/main/default/objects/Contact/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>How many days has it been since there was any Activity for this Contact?</description>
    <formula>Today() - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days has it been since there was any Activity for this Contact?</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>