force-app/main/default/objects/Contact/fields/Days_since_last_update__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_update__c</fullName>
    <formula>today() - DATEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>