force-app/main/default/objects/Contact/fields/Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue__c</fullName>
    <description>for email to case routing - internal contacts</description>
    <inlineHelpText>Pick the plant queue this contact is associated with</inlineHelpText>
    <label>Default Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calgary Finishing Plant Queue</fullName>
            </value>
            <value>
                <fullName>Calgary Plant Queue</fullName>
            </value>
            <value>
                <fullName>Complaint Email Case Queue</fullName>
            </value>
            <value>
                <fullName>General Email Case</fullName>
            </value>
            <value>
                <fullName>Glass Warehouse Queue</fullName>
            </value>
            <value>
                <fullName>McAdam Board Plant Queue</fullName>
            </value>
            <value>
                <fullName>Montreal Board &amp; Finishing Plant Queue</fullName>
            </value>
            <value>
                <fullName>Oakville and Toronto Plant Queue</fullName>
            </value>
            <value>
                <fullName>Retail Queue</fullName>
            </value>
            <value>
                <fullName>Vancouver Board Plant Queue</fullName>
            </value>
            <value>
                <fullName>Winnipeg Board Plant Queue</fullName>
            </value>
            <value>
                <fullName>Ontario Complaints Queue</fullName>
                <isActive>false</isActive>
                <label>Ontario Complaints Queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>