force-app/main/default/objects/Contact/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <description>Desk number</description>
    <label>Direct</label>
    <type>Phone</type>
</CustomField>