force-app/main/default/objects/Contact/fields/Distance_To_Plant__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Plant__c</fullName>
    <formula>DISTANCE(  Account.BillingAddress ,  Account.Default_Plant__r.Geocode__c, &apos;mi&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance To Plant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>