force-app/main/default/objects/Contact/fields/Does_Not_Have_Email__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Have_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for contacts that do not have an email address.</description>
    <inlineHelpText>Check this box if the contact does not have an email address.</inlineHelpText>
    <label>Does Not Have Email</label>
    <type>Checkbox</type>
</CustomField>