force-app/main/default/objects/Contact/fields/Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this contact is a duplicate of another contact in the system.</inlineHelpText>
    <label>Duplicate Contact</label>
    <type>Checkbox</type>
</CustomField>