force-app/main/default/objects/Contact/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested for CASL needs, this applies to Canada Contacts who have given the Approval to &apos;Opt In&apos; on Emails and Marketing Lists.</description>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>