force-app/main/default/objects/Contact/fields/Email_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date__c</fullName>
    <description>The date which the user &apos;Opts In&apos; to receive emails from CertainTeed. Designed for use as a part of CASL compliance and appears on Canadian Contacts.</description>
    <label>Email Opt In Date</label>
    <type>Date</type>
</CustomField>