force-app/main/default/objects/Contact/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows a Contact to identify if they&apos;d want to &apos;opt out&apos; of any mailings other then those that do business with Certainteed Gypsum moving forward.</description>
    <inlineHelpText>Check this box if your Contact has stated that they only wish to receive email as it relates to doing business, and not marketing or promotional emails.</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>