force-app/main/default/objects/Contact/fields/Email_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Date__c</fullName>
    <description>Added as a part of CASL Compliance, allows Marketing to update the date that the Contact Opt&apos;d Out.</description>
    <label>Email Opt Out Date</label>
    <type>Date</type>
</CustomField>