force-app/main/default/objects/Contact/fields/Enable_for_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for Promotion</label>
    <type>Checkbox</type>
</CustomField>