force-app/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Extension</description>
    <inlineHelpText>Use this field to type on an extension</inlineHelpText>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>