force-app/main/default/objects/Contact/fields/Family_Member_s__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_s__c</fullName>
    <label>Family Member(s)</label>
    <type>TextArea</type>
</CustomField>