force-app/main/default/objects/Contact/fields/Former_Employee__c.field-meta.xml
<CustomField>
    <fullName>Former_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is not their current contact record.</inlineHelpText>
    <label>Former Employee</label>
    <type>Checkbox</type>
</CustomField>