force-app/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Required for CTI/Alcatel Integration</description>
    <inlineHelpText>Required for CTI/Alcatel Integration</inlineHelpText>
    <label>Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OM Contact</fullName>
                <default>true</default>
                <label>OM Contact</label>
            </value>
            <value>
                <fullName>Telemar</fullName>
            </value>
            <value>
                <fullName>Accounting/Finance</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Company Communications</fullName>
            </value>
            <value>
                <fullName>Credit Contact</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Locator</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Price Increase Communications</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Principle</fullName>
            </value>
            <value>
                <fullName>Project/Technical/R&amp;D</fullName>
            </value>
            <value>
                <fullName>ProTeam</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>