force-app/main/default/objects/Contact/fields/GCP_ID__c.field-meta.xml
<CustomField>
    <fullName>GCP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>GCP Record ID</description>
    <inlineHelpText>GCP Record ID</inlineHelpText>
    <label>GCP_ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>