force-app/main/default/objects/Contact/fields/Hobbies_Interest__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interest__c</fullName>
    <label>Hobbies / Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>NASCAR</fullName>
            </value>
            <value>
                <fullName>Hunting</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Wine Connoisseur</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>