force-app/main/default/objects/Contact/fields/Insight_Sales_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Insight_Sales_Follow_Up_Date__c</fullName>
    <description>Date field used for automatic task follow up for insight sales team</description>
    <label>Insight Sales Follow Up Date</label>
    <type>Date</type>
</CustomField>