force-app/main/default/objects/Contact/fields/Insight_Sales_Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insight_Sales_Prep_Notes__c</fullName>
    <description>Stores notes for Insight Sales prep notes for automated task follow up.</description>
    <label>Insight Sales Prep Notes</label>
    <type>TextArea</type>
</CustomField>