force-app/main/default/objects/Contact/fields/Insight_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Insight_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insight Sales Rep used for generated automatic task follow up.</description>
    <label>Insight Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>