force-app/main/default/objects/Contact/fields/Insight_Sales_Task__c.field-meta.xml
<CustomField>
    <fullName>Insight_Sales_Task__c</fullName>
    <description>this field is used for generating automatic task follow up for insight sales team</description>
    <label>Insight Sales Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>