force-app/main/default/objects/Contact/fields/Insulation_Id__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Insulation Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>