force-app/main/default/objects/Contact/fields/Key_contact__c.field-meta.xml
<CustomField>
    <fullName>Key_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if this person is the key or main contact for the account.</description>
    <inlineHelpText>Check the box if this person is the key or main contact for the account.</inlineHelpText>
    <label>Key contact</label>
    <type>Checkbox</type>
</CustomField>