force-app/main/default/objects/Contact/fields/Last_Modified_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Call_Attempt__c</fullName>
    <label>Last Modified Call Attempt</label>
    <type>DateTime</type>
</CustomField>