force-app/main/default/objects/Contact/fields/Last_Survey_Date_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date_Check__c</fullName>
    <description>This field is used for reporting purposes. The field will be 0 if the &quot;Last Survey Date&quot; is blank, and 1 if the field is populated with a date.</description>
    <formula>IF 
 (ISBLANK(LastSurveyDate__c),0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The field will be 0 if the &quot;Last Survey Date&quot; is blank, and 1 if the field is populated with a date.</inlineHelpText>
    <label>Last Survey Date Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>