force-app/main/default/objects/Contact/fields/LastSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>LastSurveyDate__c</fullName>
    <description>Displays the contact&apos;s last survey date, which is mapped from Getfeeback.</description>
    <label>Last Survey Date</label>
    <type>Date</type>
</CustomField>