force-app/main/default/objects/Contact/fields/Link_to_the_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Record__c</fullName>
    <description>This field provides a link to the contact when exported to Excel from a report</description>
    <formula>&quot;https://na14.salesforce.com/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field provides a link to the contact when exported to Excel from a report</inlineHelpText>
    <label>Link to the Record</label>
    <type>Text</type>
</CustomField>