force-app/main/default/objects/Contact/fields/Log_A_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_A_Call__c</fullName>
    <formula>HYPERLINK(&apos;/00T/e?title=Call&amp;who_id=&apos; + Id + &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=/&apos; + Id + &apos;&amp;what_id=&apos; +  AccountId,  IMAGE(&apos;/resource/1431373835000/LogCall&apos;, &apos;Log A Call&apos;) , &apos;_self&apos;)</formula>
    <label>Log A Call</label>
    <type>Text</type>
</CustomField>