force-app/main/default/objects/Contact/fields/Loyalty_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Contact opted in to receiving Emails?</description>
    <inlineHelpText>Check if the Contact opted in to receive Emails.
Leave unchecked if the Contact has not opted in to receive Emails</inlineHelpText>
    <label>Loyalty Opt-In</label>
    <type>Checkbox</type>
</CustomField>