force-app/main/default/objects/Contact/fields/Loyalty_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Contact opted out of receiving Emails?</description>
    <inlineHelpText>Check if the Contact opted out of receiving Emails.
Leave unchecked if the Contact has not opted out of receiving Emails</inlineHelpText>
    <label>Loyalty Opt-Out</label>
    <type>Checkbox</type>
</CustomField>