force-app/main/default/objects/Contact/fields/Mailing_Country_Bank_Report__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_Bank_Report__c</fullName>
    <formula>IF( UPPER(MailingCountry) = &apos;USA&apos; || UPPER(MailingCountry) = &apos;US&apos; || UPPER(MailingCountry) = &apos;United States&apos; , &apos;USA&apos;,

IF( (  UPPER(MailingCountry ) = &apos;CA&apos; ||  UPPER(MailingCountry ) = &apos;CANADA&apos; ||  UPPER(MailingCountry ) = &apos;CAN&apos; ) , &apos;CAN&apos;,

MailingCountry

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Country Bank Report</label>
    <type>Text</type>
</CustomField>