force-app/main/default/objects/Contact/fields/Merge__c.field-meta.xml
<CustomField>
    <fullName>Merge__c</fullName>
    <description>Use with Demand Tools to merge records</description>
    <inlineHelpText>Use with Demand Tools to merge records</inlineHelpText>
    <label>Merge</label>
    <length>5</length>
    <type>Text</type>
</CustomField>