force-app/main/default/objects/Contact/fields/Merge_Group__c.field-meta.xml
<CustomField>
    <fullName>Merge_Group__c</fullName>
    <description>Use with Demand Tools to merge records</description>
    <inlineHelpText>Use with Demand Tools to merge records</inlineHelpText>
    <label>Merge Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>