force-app/main/default/objects/Contact/fields/Most_Recent_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_NPS_Score__c</fullName>
    <inlineHelpText>NPS score for the most recent survey completed by the Contact.</inlineHelpText>
    <label>Most Recent NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>