force-app/main/default/objects/Contact/fields/NICE_Contact__c.field-meta.xml
<CustomField>
    <fullName>NICE_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by the Customer Experience team and Marketing to indicate if the Insulation contact participates in the &quot;National Insulation Contractors Exchange.&quot; https://www.nicexchange.com/</description>
    <inlineHelpText>Check this box if the contact participates in NICE, the &quot;National Insulation Contractors Exchange.&quot;</inlineHelpText>
    <label>NICE Contact</label>
    <type>Checkbox</type>
</CustomField>