force-app/main/default/objects/Contact/fields/Norandex_Survey__c.field-meta.xml
<CustomField>
    <fullName>Norandex_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Norandex Survey</label>
    <type>Checkbox</type>
</CustomField>