force-app/main/default/objects/Contact/fields/NPS_Email_Test_Rec__c.field-meta.xml
<CustomField>
    <fullName>NPS_Email_Test_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Email Test Rec</label>
    <type>Checkbox</type>
</CustomField>