force-app/main/default/objects/Contact/fields/NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey__c</fullName>
    <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/Q1OKv20A?&amp;gf_q[8029785][16020180]=&quot; +  FirstName + &quot;&amp;gf_q[8029785][16144778]=&quot; +  LastName  + &quot;&amp;gf_q[8029785][16020181]=&quot;+Title+&quot;&amp;gf_q[8029785][16020184]=&quot; + MailingPostalCode+&quot;&amp;gf_q[8029785][16020182]=&quot; + Phone+&quot;&amp;gf_q[8029785][16020183]=&quot;+  Email + &quot;&amp;gf_q[8029785][17755759]=&quot;+MailingState+&quot;&amp;ContactID=&quot;+Id +&quot;&amp;AccountID=&quot; +  AccountId, &quot;Start Roofing NPS Survey&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Launch GetFeedback NPS Survey for Contact</inlineHelpText>
    <label>Roofing NPS Survey</label>
    <type>Text</type>
</CustomField>