force-app/main/default/objects/Contact/fields/NPSContact__c.field-meta.xml
<CustomField>
    <fullName>NPSContact__c</fullName>
    <description>Indicates which business unit the NPS contact is related to.</description>
    <inlineHelpText>Please choose the business unit(s) associated with this NPS contact.</inlineHelpText>
    <label>NPS Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Siding</fullName>
            </value>
            <value>
                <fullName>Insulation</fullName>
            </value>
            <value>
                <fullName>Gypsum</fullName>
            </value>
            <value>
                <fullName>Ceilings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>