force-app/main/default/objects/Contact/fields/OK_to_share_pricing__c.field-meta.xml
<CustomField>
    <fullName>OK_to_share_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defaults to unchecked; check if it&apos;s OK for this contact to know pricing.</inlineHelpText>
    <label>OK to share pricing/invoice?</label>
    <type>Checkbox</type>
</CustomField>