force-app/main/default/objects/Contact/fields/Opinion_of_CT__c.field-meta.xml
<CustomField>
    <fullName>Opinion_of_CT__c</fullName>
    <label>Opinion of CT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CT Advocate</fullName>
            </value>
            <value>
                <fullName>CT Detractor</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>