force-app/main/default/objects/Contact/fields/Opinion_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Reasons__c</fullName>
    <label>Opinion Reasons</label>
    <type>TextArea</type>
</CustomField>