force-app/main/default/objects/Contact/fields/Origin_Of_The_Survey__c.field-meta.xml
<CustomField>
    <fullName>Origin_Of_The_Survey__c</fullName>
    <label>Origin Of The Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>