force-app/main/default/objects/Contact/fields/Other_Hobby_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Hobby_Detail__c</fullName>
    <label>Other Hobby Detail</label>
    <type>TextArea</type>
</CustomField>