force-app/main/default/objects/Contact/fields/Other_Important_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Important_Date__c</fullName>
    <label>Other Important Date</label>
    <type>Date</type>
</CustomField>