force-app/main/default/objects/Contact/fields/Other_Important_Date_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Important_Date_Detail__c</fullName>
    <label>Other Important Date Detail</label>
    <type>TextArea</type>
</CustomField>