force-app/main/default/objects/Contact/fields/Owner_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Org__c</fullName>
    <formula>IF (INCLUDES (Owner.Sales_Org__c,&quot;1003&quot;), &quot;CEILINGS&quot;,
IF (INCLUDES (Owner.Sales_Org__c,&quot;1101&quot;), &quot;CEILINGS&quot;,
IF (INCLUDES (Owner.Sales_Org__c, &quot;1006&quot;), &quot;GYPSUM&quot;,
IF (INCLUDES (Owner.Sales_Org__c, &quot;1100&quot;), &quot;GYPSUM&quot;,
                &quot;NONE&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Org</label>
    <type>Text</type>
</CustomField>