force-app/main/default/objects/Contact/fields/Panel_or_Grid__c.field-meta.xml
<CustomField>
    <fullName>Panel_or_Grid__c</fullName>
    <description>This field is used to indicate the type of Ceilings products the contact sells.</description>
    <inlineHelpText>Use this field to indicate what type of Ceilings products the contact sells.</inlineHelpText>
    <label>Panel or Grid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grid Only</fullName>
            </value>
            <value>
                <fullName>Panel Only</fullName>
            </value>
            <value>
                <fullName>Panel &amp; Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>