force-app/main/default/objects/Contact/fields/Partner_User_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Partner User. Auto populated via Flow Update Contact with Partner User</description>
    <label>Partner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>