force-app/main/default/objects/Contact/fields/Partner_User_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Last_Login_Date__c</fullName>
    <description>Partner User Last Login Date To Community Site</description>
    <label>Partner User Last Login Date</label>
    <type>Date</type>
</CustomField>