force-app/main/default/objects/Contact/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF (
      NOT ( ISBLANK ( Phone )),
      25, 0
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>