force-app/main/default/objects/Contact/fields/Phone_Bank_Report__c.field-meta.xml
<CustomField>
    <fullName>Phone_Bank_Report__c</fullName>
    <description>Phone number field for Loyalty rebate claim payment information.</description>
    <label>Phone Bank Report</label>
    <length>10</length>
    <type>Text</type>
</CustomField>