force-app/main/default/objects/Contact/fields/Pricing_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check mark if contact is to receive price increase notifications</inlineHelpText>
    <label>Pricing Notifications</label>
    <type>Checkbox</type>
</CustomField>