force-app/main/default/objects/Contact/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <description>Priority Level for priority customers call routing.</description>
    <inlineHelpText>Priority Level for call routing of high priority customers.</inlineHelpText>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Regular Customer</fullName>
                <default>true</default>
                <label>0-Regular Customer</label>
            </value>
            <value>
                <fullName>1-Platinum Presidents Club</fullName>
            </value>
            <value>
                <fullName>2-Presidents Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>