force-app/main/default/objects/Contact/fields/Process_Builder_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Trigger__c</fullName>
    <label>Process Builder Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>