force-app/main/default/objects/Contact/fields/Professional_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Professional_Affiliation__c</fullName>
    <description>Professional societies or trade groups to which this contact belongs.</description>
    <inlineHelpText>Enter zero, one, or more professional societies or trade groups to which this contact belongs.</inlineHelpText>
    <label>Professional Affiliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ASHRAE</fullName>
            </value>
            <value>
                <fullName>AWCI</fullName>
            </value>
            <value>
                <fullName>BIBCA</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>ICAA</fullName>
            </value>
            <value>
                <fullName>LEED AP</fullName>
            </value>
            <value>
                <fullName>Local HBA</fullName>
            </value>
            <value>
                <fullName>NAHB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>