force-app/main/default/objects/Contact/fields/Purchasing_Role__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Role__c</fullName>
    <label>Purchasing Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Information Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>