force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This field is a formula field that maps the value of the Contact&apos;s Region from the Region field on the Account. When the end user enters a zip code for the Account, it auto calculates that information at this level.</description>
    <formula>Account.Region__r.Name</formula>
    <inlineHelpText>Shows the Contacts region based on the Accounts Zip Code field.</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>