force-app/main/default/objects/Contact/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Regional Manager. Required for all TM Contacts</inlineHelpText>
    <label>RM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>