force-app/main/default/objects/Contact/fields/RM_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Number__c</fullName>
    <externalId>true</externalId>
    <label>RM#</label>
    <length>5</length>
    <type>Text</type>
</CustomField>